--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -41,7 +41,8 @@
   {}{}
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Mapper is an algorithm from topological data analysis. This is
+      \item {Mapper is an algorithm from topological data analysis that
+      helps visualize high dimensional data. This is
       an implementation in Julia that particularly accepts a distance matrix
       as input.}
     \end{cvitems}
