--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,12 +12,12 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Julia, Python, LaTeX} % Skills
+    {Julia, Python, LaTeX, MATLAB} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Portuguese, English, German} % Skills
+    {Portuguese (Native), English (108 TOEFL), German (very good command)} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
