--- a/cv.tex
+++ b/cv.tex
@@ -31,7 +31,7 @@
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
 \colorlet{awesome}{awesome-concrete}
 % Uncomment if you would like to specify your own color
-\definecolor{awesome}{HTML}{8F498E} % that is purpleish
+\colorlet{awesome}{purpleish1}
 
 % Colors for text
 % Uncomment if you would like to specify your own color
