add intern and finish masters

--- a/cv/education.tex
+++ b/cv/education.tex
@@ -14,7 +14,7 @@
     {M.Sc. in Mathematics} % Degree
     {USP (University of São Paulo)} % Institution
     {São Carlos, SP, Brazil} % Location
-    {Aug. 2017 - Current}
+    {Aug. 2017 - Nov. 2019}
     {
       \begin{cvitems} % Description(s) bullet points
         % \item{Got a scholarship to spend six months doing a research internship
