--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -17,8 +17,8 @@
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {Package that provides an interface for some functions of BioPython.
-      It also calculates the persistent homology of a protein using the
-      Vietoris-Rips filtration using the python package ripser.}
+      It also calculates the persistent homology of a protein using the python
+      package ripser.}
     \end{cvitems}
   }
 
