--- a/cv/researchexperience.tex
+++ b/cv/researchexperience.tex
@@ -9,17 +9,28 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+  \cventry
+    {funded by École polytechnique fédérale de Lausanne (EPFL)}
+    {Intern at Cathrin's lab at School of Life Sciences - EPFL}
+    {Lausanne, Switzerland} 
+    {Jan. 2020 - May 2020} 
+    {
+      \begin{cvitems} 
+        \item {Studying RNA-seq methods and how they are used 
+              in breast cancer analysis.}
+      \end{cvitems} 
+    }
 %-------------------------------------------------------------------------------
   \cventry
     {funded by Fundação de Amparo à Pesquisa do Estado de São Paulo} % Funding agency
     {Master's student} % Job title
     {São Carlos, Brazil} % Location
-    {Aug. 2017 - current} % Date(s)
+    {Aug. 2017 - Nov. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Applying persistent homology to understand the protein structure
+        \item {Applied persistent homology to understand the protein structure
         and predict its stability;}
-        \item {Combining machine learning and persistent homology to improve
+        \item {Combined machine learning and persistent homology to improve
         the accuracy in image classification problems.}
       \end{cvitems}
     }
