change cathrin to brisken

--- a/cv/researchexperience.tex
+++ b/cv/researchexperience.tex
@@ -11,7 +11,7 @@
 
   \cventry
     {funded by École polytechnique fédérale de Lausanne (EPFL)}
-    {Intern at Cathrin's lab at School of Life Sciences - EPFL}
+    {Intern at Brisken's lab at School of Life Sciences - EPFL}
     {Lausanne, Switzerland} 
     {Jan. 2020 - May 2020} 
     {
