change projects and events

--- a/cv/events.tex
+++ b/cv/events.tex
@@ -10,10 +10,18 @@
 
 %---------------------------------------------------------
 \cvhonor
+  {XII Regional Topology Meeting} % Event
+  [A topological approach to protein stability] % Poster or talk
+  {Águas de Lindóia, Brazil} % Location
+  {Oct. 2019} % Date(s)
+
+
+%---------------------------------------------------------
+\cvhonor
   {Geometric Data Analysis} % Event
   [Persistent homology and the protein folding problem] % Poster or talk
   {Chicago, USA} % Location
-  {May. 2019} % Date(s)
+  {May 2019} % Date(s)
 
 %---------------------------------------------------------
 \cvhonor
