--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -61,4 +61,28 @@
   }
 
 %---------------------------------------------------------
+\cventry
+  {\url{https://github.com/chronchi/perscode}} % Link to the repo
+  {perscode} % Name of Project
+  {}{}
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item {Perscode is a vectorization method for persistence
+      diagrams. This is an implementation of the algorithm in python.}
+    \end{cvitems}
+  }
+
+%---------------------------------------------------------
+\cventry
+  {\url{https://github.com/chronchi/3dPD}} % Link to the repo
+  {3dPD} % Name of Project
+  {}{}
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Visualization tool for optimal cycles (w.r.t. number of edges) and persistence
+	       diagrams of three-dimensional datasets.}
+    \end{cvitems}
+  }
+
+%---------------------------------------------------------
 \end{cventries}
