change intership description

--- a/cv/researchexperience.tex
+++ b/cv/researchexperience.tex
@@ -16,8 +16,9 @@
     {Jan. 2020 - May 2020} 
     {
       \begin{cvitems} 
-        \item {Studying RNA-seq methods and how they are used 
-              in breast cancer analysis.}
+        \item {Studying RNA-seq analysis methods and how they are applied 
+            to breast cancer samples. One of the methods is 
+            Two Tier Mapper, a topological tool to study the shape of the data.}
       \end{cvitems} 
     }
 %-------------------------------------------------------------------------------
