update skills and research experience

--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -9,6 +9,22 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+
+%---------------------------------------------------------
+\cventry
+  {\url{https://ttmap.epfl.ch}} % Link to the website
+  {ttmap} % Name of Project
+  {}{}
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item {Website with a user friendly interface to use Two-Tier Mapper, a 
+             topological tool to analyse RNA-Seq data. The source code can be
+             found here: \url{https://github.com/chronchi/ttmap-app}}
+    \end{cvitems}
+  }
+
+
+
 %---------------------------------------------------------
 \cventry
   {\url{https://github.com/chronchi/ProteinPersistent.jl}} % Link to the repo
