--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,12 +12,13 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Julia, Python, LaTeX, MATLAB} % Skills
+    {Julia, Python, LaTeX, MATLAB, JavaScript} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Portuguese (Native), English (108 TOEFL), German (very good command)} % Skills
+    {Portuguese (Native), English (excellent command), 
+    German (very good command), French (basic communication)} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
