update education and skills

--- a/cls_sty/awesome-cv.cls
+++ b/cls_sty/awesome-cv.cls
@@ -481,7 +481,7 @@
         {}%
         {%
           \ifbool{isstart}{\setbool{isstart}{false}}{\acvHeaderSocialSep}%
-          \href{http://\@homepage}{\faHome\acvHeaderIconSep\@homepage}%
+          \href{https://\@homepage}{\faHome\acvHeaderIconSep\@homepage}%
         }%
       \ifthenelse{\isundefined{\@github}}%
         {}%
@@ -614,7 +614,7 @@
       {\entrypositionstyle{#1} & \entrydatestyle{#4} \\}
       {\entrytitlestyle{#2} & \entrylocationstyle{#3} \\
       \entrypositionstyle{#1} & \entrydatestyle{#4} \\}
-    \multicolumn{2}{L{\textwidth - 4.5cm}}{\descriptionstyle{#5}}
+    \multicolumn{2}{p{\textwidth - 4cm}}{\vspace{2mm} \descriptionstyle{#5}}
   \end{tabular*}%
 }
 
