--- a/cv/education.tex
+++ b/cv/education.tex
@@ -9,10 +9,21 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+  \cventry
+    {PhD in Molecular Life Sciences} % Degree
+    {École Polytechnique Fédérale de Lausanne - EPFL} % Institution
+    {Lausanne, VD, Switzerland} % Location
+    {Sep. 2020 - current}
+    {\begin{cvitems}
+        \item{Supervisor: Cathrin Brisken}
+     \end{cvitems}
+    }
+
+
 %---------------------------------------------------------
   \cventry
     {M.Sc. in Mathematics} % Degree
-    {USP (University of São Paulo)} % Institution
+    {University of São Paulo - USP} % Institution
     {São Carlos, SP, Brazil} % Location
     {Aug. 2017 - Nov. 2019}
     {
@@ -41,8 +52,8 @@
 %---------------------------------------------------------
   \cventry
     {B.S. in Mathematics} % Degree
-    {UFPR (Federal University of Paraná)} % Institution
-    {Curitiba, Brazil} % Location
+    {Federal University of Paraná - UFPR} % Institution
+    {Curitiba, PR, Brazil} % Location
     {Apr. 2013 - Jul. 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
