--- a/cv/researchexperience.tex
+++ b/cv/researchexperience.tex
@@ -11,14 +11,15 @@
 
   \cventry
     {funded by École polytechnique fédérale de Lausanne (EPFL)}
-    {Intern at Brisken's lab at School of Life Sciences - EPFL}
+    {Research assistant at Brisken's lab at School of Life Sciences - EPFL}
     {Lausanne, Switzerland} 
     {Jan. 2020 - August 2020} 
     {
       \begin{cvitems} 
-        \item {Studying RNA-seq analysis methods and how they are applied 
+        \item {Studying statistical methods and how they are applied 
             to breast cancer samples. One of the methods is 
-            Two Tier Mapper, a topological tool to study the shape of the data.}
+            Two-Tier Mapper, a topological tool to study the shape of the data.
+            Developing web-based tools for Two-Tier Mapper.}
       \end{cvitems} 
     }
 %-------------------------------------------------------------------------------
