add teaching outreach

--- a/cv/education.tex
+++ b/cv/education.tex
@@ -16,6 +16,7 @@
     {Sep. 2020 - current}
     {\begin{cvitems}
         \item{Supervisor: Cathrin Brisken}
+        \item{Fellow of Marie Curie actions (MSCA) - Horizon 2020}
      \end{cvitems}
     }
 
