--- a/cv/events.tex
+++ b/cv/events.tex
@@ -8,6 +8,14 @@
 %-------------------------------------------------------------------------------
 \begin{cvhonors}
 
+\cvhonor
+  {Basel Computational Biology Conference - BC2} % Event
+  [Estrogen signature and gene coexpression network for breast cancer stratification and survival analysis] % Poster or talk
+  {Basel, Switzerland} % Location
+  {Sep. 2021} % Date(s)
+
+
+
 %---------------------------------------------------------
 \cvhonor
   {XII Regional Topology Meeting} % Event
