--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -20,6 +20,8 @@
       \item {Website with a user friendly interface to use Two-Tier Mapper, a 
              topological tool to analyse RNA-Seq data. The source code can be
              found here: \url{https://github.com/chronchi/ttmap-app}}
+      \item {Developed a R package with a more user-friendly interface. 
+             (to be released)} 
     \end{cvitems}
   }
 
