--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Julia, Python, LaTeX, R, MATLAB, JavaScript} % Skills
+    {Julia, Python, LaTeX, R, MATLAB} % Skills
 
 %---------------------------------------------------------
   \cvskill
