--- a/cv/teachingoutreach.tex
+++ b/cv/teachingoutreach.tex
@@ -8,6 +8,23 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
+  \cventry
+    {PhD Student/Teaching Assistant} % Affiliation/role
+    {EPFL} % Organization/group
+    {Lausanne, Switzerland} % Location
+    {Sep. 2020 - current} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of experience/contributions/knowledge
+          \item Started and organize bi-weekly seminars with experts on cancer
+                prevention. The main audience is a group of european 
+                researchers and PhD students working under the same Marie Curie
+                grant, a highly prestigious grant awarded by EU.  
+          \item Started and organized a monthly bioinformatics journal club for
+                newly started PhD students from the network above.
+          \item Helped students with exercises and concepts in 
+                Numerical Analysis, a course with over 150 students.
+      \end{cvitems}
+    }
 
 %---------------------------------------------------------
   \cventry
