--- a/cv/events.tex
+++ b/cv/events.tex
@@ -9,6 +9,11 @@
 \begin{cvhonors}
 
 \cvhonor
+  {43rd Annual Conference of the International Society for Clinical Biostatistics} % Event
+  {Newcastle, UK} % Location
+  {Aug. 2022} % Date(s)
+
+\cvhonor
   {Basel Computational Biology Conference - BC2} % Event
   [Estrogen signature and gene coexpression network for breast cancer stratification and survival analysis] % Poster or talk
   {Basel, Switzerland} % Location
