--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -9,6 +9,18 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+%---------------------------------------------------------
+\cventry
+  {\url{https://upbri.gitlab.io/biogrowleR/}} % Link to the website
+  {biogrowleR} % Name of Project
+  {}{}
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item {An R package that provides tutorials and auxiliary 
+             functions on how to analyse growth measurement data.}
+    \end{cvitems}
+  }
+
 
 %---------------------------------------------------------
 \cventry
