--- a/cv.tex
+++ b/cv.tex
@@ -31,7 +31,8 @@
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
 \colorlet{awesome}{awesome-concrete}
 % Uncomment if you would like to specify your own color
-\colorlet{awesome}{purpleish1}
+% \colorlet{awesome}{purpleish1}
+\colorlet{awesome}{rblue}
 
 % Colors for text
 % Uncomment if you would like to specify your own color
