major update to cv

--- a/cv.tex
+++ b/cv.tex
@@ -60,10 +60,10 @@
 \email{carloshvronchi@gmail.com}
 \homepage{chronchi.github.io}
 \github{chronchi}
-% \linkedin{posquit0}
+\linkedin{chronchi}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
-\twitter{@chronchi}
+\twitter{chronchi}
 % \skype{skype-id}
 % \reddit{reddit-id}
 % \medium{madium-id}
@@ -96,6 +96,7 @@
 \input{cv/researchexperience.tex}
 \input{cv/teachingoutreach.tex}
 \input{cv/skills.tex}
+\input{cv/papers.tex}
 \input{cv/projects.tex}
 \input{cv/honors.tex}
 \input{cv/events.tex}
