--- a/cv/events.tex
+++ b/cv/events.tex
@@ -8,17 +8,40 @@
 %-------------------------------------------------------------------------------
 \begin{cvhonors}
 
+%---------------------------------------------------------
+\cvhonor 
+  {World Cancer Day} % Event
+  [Could algorithms and computers help us with cancer prevention?] % Title
+  {Lausanne, Switzerland} % Local
+  {Feb. 2023} % Date
+
+%---------------------------------------------------------
+\cvhonor 
+  {Talk at AstraZeneca} % Event
+  [Understanding hormone signaling and its risks on estrogen receptor-positive breast cancer] % Title
+  {Cambridge, UK} % Local
+  {Nov. 2022} % Date
+
+
+%---------------------------------------------------------
 \cvhonor
   {43rd Annual Conference of the International Society for Clinical Biostatistics} % Event
   {Newcastle, UK} % Location
   {Aug. 2022} % Date(s)
 
+%---------------------------------------------------------
+\cvhonor
+  {International workshop on cancer prevention} % Event
+  [Understanding hormone signaling and its risk on estrogen receptor-positive breast cancer] % Talk
+  {Pollone, Italy} % Location
+  {Jun. 2022} % Date
+
+%---------------------------------------------------------
 \cvhonor
   {Basel Computational Biology Conference - BC2} % Event
   [Estrogen signature and gene coexpression network for breast cancer stratification and survival analysis] % Poster or talk
   {Basel, Switzerland} % Location
   {Sep. 2021} % Date(s)
-
 
 
 %---------------------------------------------------------
