--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -18,22 +18,24 @@
     \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {An R package that provides tutorials and auxiliary 
              functions on how to analyse growth measurement data.}
+      \item {Package was taught in workshops and has been used by
+            other life scientist.}
     \end{cvitems}
   }
 
 
 %---------------------------------------------------------
 \cventry
-  {\url{https://ttmap.epfl.ch}} % Link to the website
+  {\url{https://gitlab.com/upbri/ttmap}} % Link to the website
   {ttmap} % Name of Project
   {}{}
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Website with a user friendly interface to use Two-Tier Mapper, a 
-             topological tool to analyse RNA-Seq data. The source code can be
-             found here: \url{https://github.com/chronchi/ttmap-app}}
-      \item {Developed a R package with a more user-friendly interface. 
-             (to be released)} 
+      \item {R package implementing Two-Tier Mapper, a 
+             topological tool to analyse RNA-Seq data.}
+      \item {Developed a R package with a more user-friendly interface.}
+      \item {Supervised a student that added tests and a shiny app interface
+            to the package.} 
     \end{cvitems}
   }
 
