--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,13 +12,13 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Julia, Python, LaTeX, R, MATLAB} % Skills
+    {R, Julia, Python, LaTeX, bash} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
     {Portuguese (Native), English (excellent command), 
-    German (very good command), French (basic communication)} % Skills
+    German (good command), French (good command)} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
