--- a/cv/teachingoutreach.tex
+++ b/cv/teachingoutreach.tex
@@ -9,12 +9,30 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
   \cventry
+    {PhD Student/Lab immersion supervisor} % Affiliation/role
+    {EPFL} % Organization/group
+    {Lausanne, Switzerland} % Location
+    {Sep. 2022 - Dec. 2022} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of experience/contributions/knowledge
+          \item Proposed and supervised a lab immersion project for a 
+                master's student. The student worked weekly on the lab in a 
+                project involving the tool TTMap.
+      \end{cvitems}
+    }
+ 
+ \cventry
     {PhD Student/Teaching Assistant} % Affiliation/role
     {EPFL} % Organization/group
     {Lausanne, Switzerland} % Location
     {Sep. 2020 - current} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
+          \item Teaching assistant of genomics and bioinformatics for over 100 
+                students in 2022 and 2023. Organized exercise sessions and 
+                students projects for the final assignments. Supervised more
+                10 students in the final project where they had to reproduce
+                figures from several papers.
           \item Started and organize bi-weekly seminars with experts on cancer
                 prevention. The main audience is a group of european 
                 researchers and PhD students working under the same Marie Curie
