--- a/cv/researchexperience.tex
+++ b/cv/researchexperience.tex
@@ -10,6 +10,22 @@
 \begin{cventries}
 
   \cventry
+    {funded by MSCA - Horizon 2020}
+    {Research intern at Astrazeneca}
+    {Cambridge, UK} 
+    {Nov. 2022 - Nov. 2022} 
+    {
+      \begin{cvitems} 
+        \item {Academic placement to learn and get a feeling of
+            pharmaceutical companies. Presented my research for
+            over 70 people at both the bioscience and 
+            bioinformatics department.}
+      \end{cvitems} 
+    }
+%-------------------------------------------------------------------------------
+\begin{cventries}
+
+  \cventry
     {funded by École polytechnique fédérale de Lausanne (EPFL)}
     {Research assistant at Brisken's lab at School of Life Sciences - EPFL}
     {Lausanne, Switzerland} 
