change paper and correct typos

--- a/cv/education.tex
+++ b/cv/education.tex
@@ -13,7 +13,7 @@
     {PhD in Molecular Life Sciences} % Degree
     {École Polytechnique Fédérale de Lausanne - EPFL} % Institution
     {Lausanne, VD, Switzerland} % Location
-    {Sep. 2020 - current}
+    {Sep. 2020 - expected August 2024}
     {\begin{cvitems}
         \item{Supervisor: Cathrin Brisken}
         \item{Fellow of Marie Curie actions (MSCA) - Horizon 2020}
@@ -52,7 +52,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Mathematics} % Degree
+    {B.Sc. in Mathematics} % Degree
     {Federal University of Paraná - UFPR} % Institution
     {Curitiba, PR, Brazil} % Location
     {Apr. 2013 - Jul. 2017} % Date(s)
