--- a/cv/events.tex
+++ b/cv/events.tex
@@ -9,6 +9,31 @@
 \begin{cvhonors}
 
 %---------------------------------------------------------
+\cvhonor
+  {Perspectives on cancer prevention} % Event
+  [Talk: EMBER creates a unified space for independent breast cancer transcriptomic datasets enabling precision oncology] % Talk
+  {Lausanne, Switzerland} % Location
+  {Feb. 2024} % Date
+
+
+
+%---------------------------------------------------------
+\cvhonor
+  {International workshop on cancer prevention} % Event
+  [Transcriptomic based molecular landscape provides a framework for precision medicine in breast cancer] % Talk
+  {Ghent, Belgium} % Location
+  {Jun. 2023} % Date
+
+%---------------------------------------------------------
+
+\cvhonor 
+  {Science and policy summer schoool} % Event
+  [Organized by EPFL and ETH PhD students] % Title
+  {Beatenberg, Switzerland} % Local
+  {Jul. 2023} % Date
+
+%---------------------------------------------------------
+
 \cvhonor 
   {World Cancer Day} % Event
   [Could algorithms and computers help us with cancer prevention?] % Title
@@ -17,10 +42,17 @@
 
 %---------------------------------------------------------
 \cvhonor 
-  {Talk at AstraZeneca} % Event
+  {Talks at AstraZeneca} % Event
   [Understanding hormone signaling and its risks on estrogen receptor-positive breast cancer] % Title
   {Cambridge, UK} % Local
   {Nov. 2022} % Date
+
+%---------------------------------------------------------
+\cvhonor
+  {II Congreso Internacional de Topología y Afines} % Event
+  [TDA in action: using two-tier mapper to understand breast cancer] % Talk
+  {Lima, Peru} % Location
+  {Oct. 2022} % Date
 
 
 %---------------------------------------------------------
@@ -28,6 +60,15 @@
   {43rd Annual Conference of the International Society for Clinical Biostatistics} % Event
   {Newcastle, UK} % Location
   {Aug. 2022} % Date(s)
+
+%---------------------------------------------------------
+
+\cvhonor
+  {Open Science Summer School}
+  [@EPFL, organized by EPFL and ETH PhD students]
+  {Lausanne, Switzerland}
+  {Jun. 2022}
+
 
 %---------------------------------------------------------
 \cvhonor
