--- a/cv/papers.tex
+++ b/cv/papers.tex
@@ -16,10 +16,9 @@
   {}{}
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Ronchi, C., \& Brisken C. \textbf{Molecular landscape: a data integration tool for 
-             personalized medicine in Breast Cancer}. \textit{Manuscript in preparation.}}
+      \item {Ronchi, C., \& Haider, S., \& Brisken C. \textbf{EMBER creates a unified space for independent breast cancer transcriptomic datasets enabling precision oncology} \textit{In review.}}
       \item {Ronchi, C., \& Ambrosini G. \& Brisken C. \textbf{biogrowleR: Extracting insights 
-             from growth measurement data}. \textit{Manuscript in preparation.}}
+             from growth measurement data}. \textit{In preparation.}}
       \item {Ronchi, C., \& Brisken, C. (2023). \textbf{Targeting the Progesterone Receptor 
              in Breast Cancer: Mind the Short Form!} In Clinical Cancer Research
              (pp. OF1–OF2). American Association for Cancer Research (AACR). 
