--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -9,6 +9,21 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+\cventry
+  {\url{https://chronchi.github.io/ember/}} % Link to the website
+  {ember} % Name of Project
+  {}{}
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item {An R package that implements the method described in 
+             the accompanying paper (In review).}
+      \item {Integration of bulk RNA-seq and microarray datasets
+             for individual samples. Suitable for biomarker
+             discovery and cross dataset comparison.} 
+    \end{cvitems}
+  }
+
+
 %---------------------------------------------------------
 \cventry
   {\url{https://upbri.gitlab.io/biogrowleR/}} % Link to the website
@@ -33,12 +48,11 @@
     \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {R package implementing Two-Tier Mapper, a 
              topological tool to analyse RNA-Seq data.}
-      \item {Developed a R package with a more user-friendly interface.}
-      \item {Supervised a student that added tests and a shiny app interface
+      \item {Developed a R package with a more user-friendly interface and API.}
+      \item {Supervised a master's student that added tests and a shiny app interface
             to the package.} 
     \end{cvitems}
   }
-
 
 
 %---------------------------------------------------------
@@ -54,17 +68,6 @@
     \end{cvitems}
   }
 
-%---------------------------------------------------------
-\cventry
-  {\url{https://github.com/chronchi/HSP.jl}} % Link to the repo
-  {HSP.jl} % Name of Project
-  {}{}
-  {
-    \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Julia implementation of a package to calculate the
-      optimal Hansen Solubility Parameters.}
-    \end{cvitems}
-  }
 
 %---------------------------------------------------------
 \cventry
@@ -75,7 +78,7 @@
     \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {Mapper is an algorithm from topological data analysis that
       helps visualize high dimensional data. This is
-      an implementation in Julia that particularly accepts a distance matrix
+      an implementation in Julia that accepts a distance matrix
       as input.}
     \end{cvitems}
   }
@@ -94,27 +97,26 @@
 
 %---------------------------------------------------------
 \cventry
-  {\url{https://github.com/chronchi/perscode}} % Link to the repo
-  {perscode} % Name of Project
-  {}{}
-  {
-    \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Perscode is a vectorization method for persistence
-      diagrams. This is an implementation of the algorithm in python.}
-    \end{cvitems}
-  }
-
-%---------------------------------------------------------
-\cventry
   {\url{https://github.com/chronchi/3dPD}} % Link to the repo
   {3dPD} % Name of Project
   {}{}
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Visualization tool for optimal cycles (w.r.t. number of edges) and persistence
-	       diagrams of three-dimensional datasets.}
+	       diagrams of three-dimensional datasets. Developed as part of my master thesis.}
     \end{cvitems}
   }
 
+%---------------------------------------------------------
+\cventry
+  {\url{https://github.com/chronchi/HSP.jl}} % Link to the repo
+  {HSP.jl} % Name of Project
+  {}{}
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
+      \item {Julia implementation of a package to calculate the
+      optimal Hansen Solubility Parameters.}
+    \end{cvitems}
+  }
 %---------------------------------------------------------
 \end{cventries}
