--- a/cv/researchexperience.tex
+++ b/cv/researchexperience.tex
@@ -7,16 +7,46 @@
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
+
+
+
 \begin{cventries}
 
   \cventry
     {funded by MSCA - Horizon 2020}
-    {Research intern at Astrazeneca}
+    {PhD student at EPFL}
+    {Lausanne, Switzerland} 
+    {Sep. 2020 - Current} 
+    {
+      \begin{cvitems} 
+        \item {Developed algorithms using bulk RNA-seq and microarray to better
+               understand breast cancer and improve diagnosis.}
+        \item {Developed several R packages for biostatistics and bioinformatic
+                analysis in the lab.} 
+        \item {Used Bayesian Inference in novel ways to extract insights from 
+               data generated in the lab and elsewhere. }
+        \item {Analysed multiple transcriptomics dataset, including 
+               Bulk RNA-seq, scRNA-seq, microarray, CHiP-seq.}
+        \item { Developed several analysis pipelines for transcriptomics
+                data that is shared in the group and used by non-bioinformaticians as well.}
+        \item {Experienced in communicating with biologists through talks and also
+               by writing reproducible reports using quarto.}
+      \end{cvitems} 
+    }
+%-------------------------------------------------------------------------------
+
+
+\begin{cventries}
+
+  \cventry
+    {funded by MSCA - Horizon 2020}
+    {Research intern at AstraZeneca}
     {Cambridge, UK} 
     {Nov. 2022 - Nov. 2022} 
     {
       \begin{cvitems} 
-        \item {Academic placement to learn and get a feeling of
+        \item {Academic placement to learn and understand the research 
+            process in
             pharmaceutical companies. Presented my research for
             over 70 people at both the bioscience and 
             bioinformatics department.}
@@ -61,8 +91,6 @@
   {Jul. 2016 - Jul. 2017} % Date(s)
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Studied foundations of analysis and multilinear algebra;}
-      \item {Studied numerical analysis methods for matrix decomposition;}
       \item {Studied and implemented both stochastic and conjugate gradient
       method, SVM, neural networks and logistic regression;}
       \item {Applied Convolutional Neural Networks to predict LaTeX characters.}
