--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -11,8 +11,8 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Programming} % Category
-    {R, Julia, Python, LaTeX, bash} % Skills
+    {Programming and HPC} % Category
+    {R, python, Julia, LaTeX, bash, SQL, docker, Slurm} % Skills
 
 %---------------------------------------------------------
   \cvskill
