--- a/cv/teachingoutreach.tex
+++ b/cv/teachingoutreach.tex
@@ -9,15 +9,17 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
   \cventry
-    {PhD Student/Lab immersion supervisor} % Affiliation/role
+    {PhD Student/Research outreach and supervision} % Affiliation/role
     {EPFL} % Organization/group
     {Lausanne, Switzerland} % Location
-    {Sep. 2022 - Dec. 2022} % Date(s)
+    {Sep. 2020 - Now} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
           \item Proposed and supervised a lab immersion project for a 
                 master's student. The student worked weekly on the lab in a 
                 project involving the tool TTMap.
+          \item Participated in more than 5 conferences, going from 
+                biostatistics and bioinformatics to public outreach. 
       \end{cvitems}
     }
  
@@ -53,28 +55,15 @@
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
         \item {Developed teaching resources to teach high leve mathematics
-        to 100 high school students during one week. The topics were:
-        \begin{itemize}
-          \item Number Theory and Criptograhy;
-          \item Euclidean and Non-Euclidean geometries.
-        \end{itemize}}
+        to 100 high school students during one week. The topics were
+        \textit{Number Theory and Criptograhy}; \textit{Euclidean and Non-Euclidean geometries.}}
         \item {Organized an one week long academic session for math students,
         with courses and invited lectures.}
+        \item {Teaching assistant of analytic geometry for over 20 students 
+            in a semester} 
       \end{cvitems}
     }
 
-%---------------------------------------------------------
-  \cventry
-    {Federal University of Paraná} % Organization/group
-    {Teaching Assistant - Analytic Geometry} % Affiliation/role
-    {Curitiba, Brazil} % Location
-    {Mar. 2016 - Jun. 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Organized weekly meetings with students to help them and solve
-        problems in Analytic Geometry.}
-      \end{cvitems}
-    }
 
 %---------------------------------------------------------
 \end{cventries}
