--- a/cv.tex
+++ b/cv.tex
@@ -55,7 +55,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo{./examples/profile.png}
 \name{Carlos}{Ronchi}
-\position{Mathematician}
+\position{Mathematician $\cdot$ Computational biologist}
 
 \email{carloshvronchi@gmail.com}
 \homepage{chronchi.github.io}
@@ -92,14 +92,15 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
+\input{cv/summary.tex}
 \input{cv/education.tex}
 \input{cv/researchexperience.tex}
 \input{cv/teachingoutreach.tex}
 \input{cv/skills.tex}
 \input{cv/papers.tex}
 \input{cv/projects.tex}
-\input{cv/honors.tex}
 \input{cv/events.tex}
+\input{cv/honors.tex}
 
 
 %-------------------------------------------------------------------------------
